--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatPRD - 智能PRD生成工具</title>
+    <title>ChatPRD - AI驱动的智能PRD生成工具</title>
+    <meta name="description" content="ChatPRD是专为产品经理打造的AI智能PRD生成工具，轻松将想法转化为专业的产品需求文档">
+    <!-- 引入现代字体 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,9 +25,9 @@
         <nav>
             <div class="logo">ChatPRD</div>
             <ul>
-                <li><a href="#features">功能</a></li>
-                <li><a href="#testimonials">用户评价</a></li>
-                <li><a href="#try-it">立即试用</a></li>
+                <li><a href="#features">功能特色</a></li>
+                <li><a href="#testimonials">用户好评</a></li>
+                <li><a href="#try-it">立即体验</a></li>
             </ul>
         </nav>
     </header>
@@ -30,66 +35,58 @@
     <main>
         <section id="hero">
             <h1>ChatPRD - 让PRD编写变得简单</h1>
-            <p>根据您的描述,智能生成产品需求文档</p>
-            <a href="#try-it" class="cta-button">免费试用</a>
+            <p>基于AI技术，将你的产品想法智能转化为专业的产品需求文档，提升产品经理工作效率</p>
+            <a href="#try-it" class="cta-button">免费体验</a>
         </section>
 
         <section id="features">
-            <h2>主要功能</h2>
+            <h2>强大功能，助力产品成功</h2>
             <div class="feature-list">
                 <div class="feature">
-                    <i class="icon">📝</i>
-                    <h3>智能生成</h3>
-                    <p>根据简单描述自动生成详细PRD</p>
+                    <div class="icon">🚀</div>
+                    <h3>AI智能生成</h3>
+                    <p>基于先进的AI技术，只需简单描述产品想法，即可自动生成结构完整、逻辑清晰的PRD文档</p>
                 </div>
                 <div class="feature">
-                    <i class="icon">🔄</i>
-                    <h3>实时迭代</h3>
-                    <p>快速调整和优化PRD内容</p>
+                    <div class="icon">⚡</div>
+                    <h3>实时协作编辑</h3>
+                    <p>支持团队实时协作，快速迭代和优化PRD内容，让团队协作更加高效顺畅</p>
                 </div>
                 <div class="feature">
-                    <i class="icon">📊</i>
-                    <h3>多种格式</h3>
-                    <p>支持多种PRD输出格式</p>
+                    <div class="icon">📋</div>
+                    <h3>多格式导出</h3>
+                    <p>支持Word、PDF、Markdown等多种格式导出，满足不同场景下的文档分享需求</p>
                 </div>
             </div>
         </section>
 
         <section id="testimonials">
-            <h2>用户评价</h2>
+            <h2>用户真实反馈</h2>
             <div class="testimonial-list">
                 <div class="testimonial">
                     <div class="stars">★★★★★</div>
-                    <p>"ChatPRD大大提高了我的工作效率!"</p>
-                    <p class="author">- 张三, 产品经理</p>
+                    <p>"ChatPRD帮我将PRD编写时间缩短了70%，而且生成的文档质量非常高，团队都很满意！"</p>
+                    <div class="author">张伟 - 阿里巴巴产品经理</div>
                 </div>
                 <div class="testimonial">
-                    <div class="stars">★★★★☆</div>
-                    <p>"非常实用的工具,推荐给所有产品从业者。"</p>
-                    <p class="author">- 李四, 创业者</p>
+                    <div class="stars">★★★★★</div>
+                    <p>"作为创业者，时间就是生命。ChatPRD让我能快速将产品想法转化为专业文档，非常实用。"</p>
+                    <div class="author">李明 - 科技创业者</div>
                 </div>
             </div>
         </section>
 
-        <section id="feedback">
-            <h2>用户反馈</h2>
-            <form id="feedback-form">
-                <input type="text" placeholder="您的姓名" required>
-                <input type="email" placeholder="您的邮箱" required>
-                <textarea placeholder="您的反馈意见" required></textarea>
-                <button type="submit" class="cta-button">提交反馈</button>
-            </form>
-        </section>
+
 
         <section id="try-it">
-            <h2>立即试用</h2>
-            <p>体验ChatPRD的强大功能</p>
-            <a href="chat.html" class="cta-button">开始试用</a>
+            <h2>开始您的PRD创作之旅</h2>
+            <p>立即体验AI驱动的智能PRD生成，让产品文档编写更加轻松高效</p>
+            <a href="chat.html" class="cta-button">免费开始使用</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 ChatPRD. 保留所有权利。</p>
+        <p>&copy; 2025 ChatPRD. 专注产品文档智能化创作</p>
     </footer>
 
     <script src="script.js"></script>
