--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatPRD - AI驱动的智能PRD生成工具</title>
     <meta name="description" content="ChatPRD是专为产品经理打造的AI智能PRD生成工具，轻松将想法转化为专业的产品需求文档">
+    <!-- 网站图标 -->
+    <link rel="icon" type="image/png" href="chatprd.png">
+    <link rel="shortcut icon" type="image/png" href="chatprd.png">
+    <link rel="apple-touch-icon" href="chatprd.png">
     <!-- 引入现代字体 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +31,7 @@
             <ul>
                 <li><a href="#features">功能特色</a></li>
                 <li><a href="#testimonials">用户好评</a></li>
+                <li><a href="#contact">联系方式</a></li>
                 <li><a href="#try-it">立即体验</a></li>
             </ul>
         </nav>
@@ -36,7 +41,7 @@
         <section id="hero">
             <h1>ChatPRD - 让PRD编写变得简单</h1>
             <p>基于AI技术，将你的产品想法智能转化为专业的产品需求文档，提升产品经理工作效率</p>
-            <a href="#try-it" class="cta-button">免费体验</a>
+            <a href="chat.html" class="cta-button">免费体验</a>
         </section>
 
         <section id="features">
@@ -82,6 +87,36 @@
             <h2>开始您的PRD创作之旅</h2>
             <p>立即体验AI驱动的智能PRD生成，让产品文档编写更加轻松高效</p>
             <a href="chat.html" class="cta-button">免费开始使用</a>
+        </section>
+
+        <section id="contact">
+            <h2>联系方式</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <h3>加入我们的交流群</h3>
+                    <p>与更多产品经理一起交流PRD编写经验，获取最新功能更新和使用技巧</p>
+                    <div class="contact-features">
+                        <div class="contact-feature">
+                            <span class="contact-icon">💬</span>
+                            <span>产品需求讨论</span>
+                        </div>
+                        <div class="contact-feature">
+                            <span class="contact-icon">🔄</span>
+                            <span>功能更新通知</span>
+                        </div>
+                        <div class="contact-feature">
+                            <span class="contact-icon">🤝</span>
+                            <span>用户互助交流</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="qr-code-container">
+                    <div class="qr-code-card">
+                        <img src="chatprd_cn_qq.jpg" alt="ChatPRD QQ交流群" class="qr-code">
+                        <p class="qr-code-text">扫码加入QQ交流群</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
