--- a/chat.html
+++ b/chat.html
@@ -67,7 +67,7 @@
                         <span class="loading-text">AI正在为您生成PRD文档...</span>
                     </div>
                 </div>
-                <button id="scroll-to-bottom-btn" style="display: none;" onclick="scrollToBottomManually()">
+                <button id="scroll-to-bottom-btn" type="button" style="display: none;" onclick="scrollToBottomManually()">
                     <span>↓</span>
                     <span>回到底部</span>
                 </button>
