--- a/chat.html
+++ b/chat.html
@@ -27,6 +27,8 @@
     <!-- 引入代码高亮库 -->
     <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/lib/highlight.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/styles/github.min.css">
+    <!-- 引入文件下载库 -->
+    <script src="https://unpkg.com/file-saver@2.0.5/dist/FileSaver.min.js"></script>
     <link rel="stylesheet" href="chat-style.css">
 </head>
 <body>
